# esp32_ili9341_ft6336u_lvgl_GUIGuider

./: CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.old
components/: lv_conf.h
components/espressif__esp_lvgl_port/src/lvgl8/: esp_lvgl_port.c
components/lvgl__lvgl/: lvgl.h
components/lvgl__lvgl/src/: lv_conf_internal.h
main/: CMakeLists.txt  idf_component.yml  spi_master_example_main.c
main/ui/custom/: custom.c  custom.h  lv_conf_ext.h
